# portable-executable-library

./: .gitignore
src/: CMakeLists.txt  config.cmake
src/PeConverter/: CMakeLists.txt  main.cpp
src/pe_lib/: CMakeLists.txt  pe_base.cpp  pe_base.h  pe_bound_import.cpp  pe_checksum.cpp  pe_debug.cpp  pe_exception_directory.cpp  pe_exports.cpp  pe_factory.cpp  pe_factory.h  pe_imports.cpp  pe_load_config.cpp  pe_properties.h  pe_properties_generic.cpp  pe_properties_generic.h  pe_rebuilder.cpp  pe_relocations.cpp  pe_resource_viewer.cpp  pe_resource_viewer.h  pe_resources.cpp  pe_section.cpp  pe_structures.h  pe_tls.cpp  resource_cursor_icon_writer.cpp  resource_message_list_reader.cpp  resource_string_table_reader.cpp  resource_version_info_reader.cpp  stdint_defs.h
src/samples/: CMakeLists.txt
src/samples/address_convertions/: CMakeLists.txt  main.cpp
src/samples/basic_dotnet_viewer/: CMakeLists.txt  main.cpp
src/samples/basic_info_viewer/: CMakeLists.txt  main.cpp
src/samples/bound_import_reader/: CMakeLists.txt  main.cpp
src/samples/debug_info_reader/: CMakeLists.txt  main.cpp
src/samples/entropy_calculator/: CMakeLists.txt  main.cpp
src/samples/exception_dir_reader/: CMakeLists.txt  main.cpp
src/samples/export_adder/: CMakeLists.txt  main.cpp
src/samples/exports_reader/: CMakeLists.txt  main.cpp
src/samples/full_pe_rebuilder/: CMakeLists.txt  main.cpp
src/samples/image_config_editor/: CMakeLists.txt  main.cpp
src/samples/import_adder/: CMakeLists.txt  main.cpp
src/samples/imports_reader/: CMakeLists.txt  main.cpp
src/samples/pe_config_reader/: CMakeLists.txt  main.cpp
src/samples/pe_realigner/: CMakeLists.txt  main.cpp
src/samples/pe_rebaser/: CMakeLists.txt  main.cpp
src/samples/pe_sections_reader/: CMakeLists.txt  main.cpp
src/samples/pe_stripper/: CMakeLists.txt  main.cpp
src/samples/relocation_adder/: CMakeLists.txt  main.cpp
src/samples/relocations_reader/: CMakeLists.txt  main.cpp
src/samples/resource_editor/: CMakeLists.txt  main.cpp  resource.h  resource.rc
src/samples/resource_viewer/: CMakeLists.txt  main.cpp
src/samples/rich_overlay_stub_reader/: CMakeLists.txt  main.cpp
src/samples/section_adder/: CMakeLists.txt  main.cpp
src/samples/sections_and_addresses/: CMakeLists.txt  main.cpp
src/samples/tls_editor/: CMakeLists.txt  main.cpp
src/samples/tls_reader/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  test.h
src/tests/test_bound_import/: CMakeLists.txt  main.cpp
src/tests/test_checksum/: CMakeLists.txt  main.cpp
src/tests/test_debug/: CMakeLists.txt  main.cpp
src/tests/test_dotnet/: CMakeLists.txt  main.cpp
src/tests/test_entropy/: CMakeLists.txt  main.cpp
src/tests/test_exception_directory/: CMakeLists.txt  main.cpp
(+34 files in other folders)
